agregue he hice invisible el menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
 </head>
 
 <body>
-    <header >
+    <header>
         <div class="logo">
             <a href="index.html">
                 <img src="/imagenes/Cambios guayana.png" alt="Logo de la empresa">
             </a>
         </div>
 
-        <nav >
+        <button class="menu-toggle" aria-label="Abrir menú">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+
+        <nav class="nav-menu">
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#productos">Productos</a></li>
