Arregle el diseño responsive de las reseñas

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </header>
     
-    <div id="Inicio"></div> <!-- Ancla invisible --> 
+    <div id="inicio"></div> <!-- Ancla invisible --> 
 
     <main>
         <section class="hero" id="Inicio">
